--- a/starter_code/model_1.ipynb
+++ b/starter_code/model_1.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "# scale the data\n",
-    "X_scaler =  StandardScaler().fit(X_train)\n",
+    "X_scaler =  MinMaxScaler().fit(X_train)\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
     "X_test_scaled = X_scaler.transform(X_test)\n",
     "\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "SVC(kernel='linear')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -713,86 +713,86 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
-      "[CV 1/5] END .................C=1, gamma=0.0001;, score=0.890 total time=   0.4s\n",
-      "[CV 2/5] END .................C=1, gamma=0.0001;, score=0.888 total time=   0.4s\n",
-      "[CV 3/5] END .................C=1, gamma=0.0001;, score=0.881 total time=   0.4s\n",
-      "[CV 4/5] END .................C=1, gamma=0.0001;, score=0.896 total time=   0.5s\n",
-      "[CV 5/5] END .................C=1, gamma=0.0001;, score=0.882 total time=   0.7s\n",
-      "[CV 1/5] END .................C=1, gamma=0.0005;, score=0.890 total time=   0.4s\n",
-      "[CV 2/5] END .................C=1, gamma=0.0005;, score=0.888 total time=   0.5s\n",
-      "[CV 3/5] END .................C=1, gamma=0.0005;, score=0.881 total time=   0.4s\n",
-      "[CV 4/5] END .................C=1, gamma=0.0005;, score=0.896 total time=   0.5s\n",
-      "[CV 5/5] END .................C=1, gamma=0.0005;, score=0.882 total time=   0.7s\n",
-      "[CV 1/5] END ..................C=1, gamma=0.001;, score=0.890 total time=   0.4s\n",
-      "[CV 2/5] END ..................C=1, gamma=0.001;, score=0.888 total time=   0.4s\n",
-      "[CV 3/5] END ..................C=1, gamma=0.001;, score=0.881 total time=   0.4s\n",
-      "[CV 4/5] END ..................C=1, gamma=0.001;, score=0.896 total time=   0.5s\n",
-      "[CV 5/5] END ..................C=1, gamma=0.001;, score=0.882 total time=   0.7s\n",
-      "[CV 1/5] END ..................C=1, gamma=0.005;, score=0.890 total time=   0.4s\n",
-      "[CV 2/5] END ..................C=1, gamma=0.005;, score=0.888 total time=   0.4s\n",
-      "[CV 3/5] END ..................C=1, gamma=0.005;, score=0.881 total time=   0.4s\n",
-      "[CV 4/5] END ..................C=1, gamma=0.005;, score=0.896 total time=   0.5s\n",
-      "[CV 5/5] END ..................C=1, gamma=0.005;, score=0.882 total time=   0.7s\n",
-      "[CV 1/5] END .................C=5, gamma=0.0001;, score=0.890 total time=   0.8s\n",
-      "[CV 2/5] END .................C=5, gamma=0.0001;, score=0.890 total time=   0.9s\n",
-      "[CV 3/5] END .................C=5, gamma=0.0001;, score=0.882 total time=   0.9s\n",
-      "[CV 4/5] END .................C=5, gamma=0.0001;, score=0.898 total time=   1.0s\n",
-      "[CV 5/5] END .................C=5, gamma=0.0001;, score=0.882 total time=   1.4s\n",
-      "[CV 1/5] END .................C=5, gamma=0.0005;, score=0.890 total time=   0.8s\n",
-      "[CV 2/5] END .................C=5, gamma=0.0005;, score=0.890 total time=   0.9s\n",
-      "[CV 3/5] END .................C=5, gamma=0.0005;, score=0.882 total time=   0.9s\n",
-      "[CV 4/5] END .................C=5, gamma=0.0005;, score=0.898 total time=   1.0s\n",
-      "[CV 5/5] END .................C=5, gamma=0.0005;, score=0.882 total time=   1.5s\n",
-      "[CV 1/5] END ..................C=5, gamma=0.001;, score=0.890 total time=   0.8s\n",
-      "[CV 2/5] END ..................C=5, gamma=0.001;, score=0.890 total time=   0.9s\n",
-      "[CV 3/5] END ..................C=5, gamma=0.001;, score=0.882 total time=   0.9s\n",
-      "[CV 4/5] END ..................C=5, gamma=0.001;, score=0.898 total time=   1.1s\n",
-      "[CV 5/5] END ..................C=5, gamma=0.001;, score=0.882 total time=   1.5s\n",
-      "[CV 1/5] END ..................C=5, gamma=0.005;, score=0.890 total time=   0.8s\n",
-      "[CV 2/5] END ..................C=5, gamma=0.005;, score=0.890 total time=   0.9s\n",
-      "[CV 3/5] END ..................C=5, gamma=0.005;, score=0.882 total time=   0.9s\n",
-      "[CV 4/5] END ..................C=5, gamma=0.005;, score=0.898 total time=   1.0s\n",
-      "[CV 5/5] END ..................C=5, gamma=0.005;, score=0.882 total time=   1.5s\n",
-      "[CV 1/5] END ................C=10, gamma=0.0001;, score=0.890 total time=   1.1s\n",
-      "[CV 2/5] END ................C=10, gamma=0.0001;, score=0.891 total time=   1.2s\n",
-      "[CV 3/5] END ................C=10, gamma=0.0001;, score=0.883 total time=   1.5s\n",
-      "[CV 4/5] END ................C=10, gamma=0.0001;, score=0.899 total time=   1.6s\n",
-      "[CV 5/5] END ................C=10, gamma=0.0001;, score=0.881 total time=   1.7s\n",
-      "[CV 1/5] END ................C=10, gamma=0.0005;, score=0.890 total time=   1.1s\n",
-      "[CV 2/5] END ................C=10, gamma=0.0005;, score=0.891 total time=   1.2s\n",
-      "[CV 3/5] END ................C=10, gamma=0.0005;, score=0.883 total time=   1.5s\n",
-      "[CV 4/5] END ................C=10, gamma=0.0005;, score=0.899 total time=   1.6s\n",
-      "[CV 5/5] END ................C=10, gamma=0.0005;, score=0.881 total time=   1.7s\n",
-      "[CV 1/5] END .................C=10, gamma=0.001;, score=0.890 total time=   1.1s\n",
-      "[CV 2/5] END .................C=10, gamma=0.001;, score=0.891 total time=   1.2s\n",
-      "[CV 3/5] END .................C=10, gamma=0.001;, score=0.883 total time=   1.5s\n",
-      "[CV 4/5] END .................C=10, gamma=0.001;, score=0.899 total time=   1.6s\n",
-      "[CV 5/5] END .................C=10, gamma=0.001;, score=0.881 total time=   1.8s\n",
-      "[CV 1/5] END .................C=10, gamma=0.005;, score=0.890 total time=   1.1s\n",
-      "[CV 2/5] END .................C=10, gamma=0.005;, score=0.891 total time=   1.2s\n",
-      "[CV 3/5] END .................C=10, gamma=0.005;, score=0.883 total time=   1.5s\n",
-      "[CV 4/5] END .................C=10, gamma=0.005;, score=0.899 total time=   1.7s\n",
-      "[CV 5/5] END .................C=10, gamma=0.005;, score=0.881 total time=   1.7s\n",
-      "[CV 1/5] END ................C=50, gamma=0.0001;, score=0.891 total time=   3.5s\n",
-      "[CV 2/5] END ................C=50, gamma=0.0001;, score=0.890 total time=   3.1s\n",
-      "[CV 3/5] END ................C=50, gamma=0.0001;, score=0.882 total time=   4.0s\n",
-      "[CV 4/5] END ................C=50, gamma=0.0001;, score=0.900 total time=   4.5s\n",
-      "[CV 5/5] END ................C=50, gamma=0.0001;, score=0.880 total time=   3.9s\n",
-      "[CV 1/5] END ................C=50, gamma=0.0005;, score=0.891 total time=   3.4s\n",
-      "[CV 2/5] END ................C=50, gamma=0.0005;, score=0.890 total time=   3.1s\n",
-      "[CV 3/5] END ................C=50, gamma=0.0005;, score=0.882 total time=   4.0s\n",
-      "[CV 4/5] END ................C=50, gamma=0.0005;, score=0.900 total time=   4.4s\n",
-      "[CV 5/5] END ................C=50, gamma=0.0005;, score=0.880 total time=   3.9s\n",
-      "[CV 1/5] END .................C=50, gamma=0.001;, score=0.891 total time=   3.4s\n",
-      "[CV 2/5] END .................C=50, gamma=0.001;, score=0.890 total time=   3.1s\n",
-      "[CV 3/5] END .................C=50, gamma=0.001;, score=0.882 total time=   4.0s\n",
-      "[CV 4/5] END .................C=50, gamma=0.001;, score=0.900 total time=   4.4s\n",
-      "[CV 5/5] END .................C=50, gamma=0.001;, score=0.880 total time=   3.9s\n",
-      "[CV 1/5] END .................C=50, gamma=0.005;, score=0.891 total time=   3.4s\n",
-      "[CV 2/5] END .................C=50, gamma=0.005;, score=0.890 total time=   3.1s\n",
-      "[CV 3/5] END .................C=50, gamma=0.005;, score=0.882 total time=   4.0s\n",
-      "[CV 4/5] END .................C=50, gamma=0.005;, score=0.900 total time=   4.4s\n",
-      "[CV 5/5] END .................C=50, gamma=0.005;, score=0.880 total time=   3.9s\n"
+      "[CV 1/5] END .................C=1, gamma=0.0001;, score=0.846 total time=   0.3s\n",
+      "[CV 2/5] END .................C=1, gamma=0.0001;, score=0.840 total time=   0.2s\n",
+      "[CV 3/5] END .................C=1, gamma=0.0001;, score=0.827 total time=   0.3s\n",
+      "[CV 4/5] END .................C=1, gamma=0.0001;, score=0.849 total time=   0.2s\n",
+      "[CV 5/5] END .................C=1, gamma=0.0001;, score=0.842 total time=   0.2s\n",
+      "[CV 1/5] END .................C=1, gamma=0.0005;, score=0.846 total time=   0.2s\n",
+      "[CV 2/5] END .................C=1, gamma=0.0005;, score=0.840 total time=   0.2s\n",
+      "[CV 3/5] END .................C=1, gamma=0.0005;, score=0.827 total time=   0.2s\n",
+      "[CV 4/5] END .................C=1, gamma=0.0005;, score=0.849 total time=   0.2s\n",
+      "[CV 5/5] END .................C=1, gamma=0.0005;, score=0.842 total time=   0.2s\n",
+      "[CV 1/5] END ..................C=1, gamma=0.001;, score=0.846 total time=   0.2s\n",
+      "[CV 2/5] END ..................C=1, gamma=0.001;, score=0.840 total time=   0.2s\n",
+      "[CV 3/5] END ..................C=1, gamma=0.001;, score=0.827 total time=   0.3s\n",
+      "[CV 4/5] END ..................C=1, gamma=0.001;, score=0.849 total time=   0.3s\n",
+      "[CV 5/5] END ..................C=1, gamma=0.001;, score=0.842 total time=   0.2s\n",
+      "[CV 1/5] END ..................C=1, gamma=0.005;, score=0.846 total time=   0.3s\n",
+      "[CV 2/5] END ..................C=1, gamma=0.005;, score=0.840 total time=   0.2s\n",
+      "[CV 3/5] END ..................C=1, gamma=0.005;, score=0.827 total time=   0.2s\n",
+      "[CV 4/5] END ..................C=1, gamma=0.005;, score=0.849 total time=   0.2s\n",
+      "[CV 5/5] END ..................C=1, gamma=0.005;, score=0.842 total time=   0.2s\n",
+      "[CV 1/5] END .................C=5, gamma=0.0001;, score=0.863 total time=   0.3s\n",
+      "[CV 2/5] END .................C=5, gamma=0.0001;, score=0.872 total time=   0.3s\n",
+      "[CV 3/5] END .................C=5, gamma=0.0001;, score=0.853 total time=   0.3s\n",
+      "[CV 4/5] END .................C=5, gamma=0.0001;, score=0.865 total time=   0.3s\n",
+      "[CV 5/5] END .................C=5, gamma=0.0001;, score=0.863 total time=   0.3s\n",
+      "[CV 1/5] END .................C=5, gamma=0.0005;, score=0.863 total time=   0.3s\n",
+      "[CV 2/5] END .................C=5, gamma=0.0005;, score=0.872 total time=   0.3s\n",
+      "[CV 3/5] END .................C=5, gamma=0.0005;, score=0.853 total time=   0.3s\n",
+      "[CV 4/5] END .................C=5, gamma=0.0005;, score=0.865 total time=   0.3s\n",
+      "[CV 5/5] END .................C=5, gamma=0.0005;, score=0.863 total time=   0.3s\n",
+      "[CV 1/5] END ..................C=5, gamma=0.001;, score=0.863 total time=   0.3s\n",
+      "[CV 2/5] END ..................C=5, gamma=0.001;, score=0.872 total time=   0.3s\n",
+      "[CV 3/5] END ..................C=5, gamma=0.001;, score=0.853 total time=   0.3s\n",
+      "[CV 4/5] END ..................C=5, gamma=0.001;, score=0.865 total time=   0.3s\n",
+      "[CV 5/5] END ..................C=5, gamma=0.001;, score=0.863 total time=   0.3s\n",
+      "[CV 1/5] END ..................C=5, gamma=0.005;, score=0.863 total time=   0.3s\n",
+      "[CV 2/5] END ..................C=5, gamma=0.005;, score=0.872 total time=   0.3s\n",
+      "[CV 3/5] END ..................C=5, gamma=0.005;, score=0.853 total time=   0.3s\n",
+      "[CV 4/5] END ..................C=5, gamma=0.005;, score=0.865 total time=   0.3s\n",
+      "[CV 5/5] END ..................C=5, gamma=0.005;, score=0.863 total time=   0.3s\n",
+      "[CV 1/5] END ................C=10, gamma=0.0001;, score=0.870 total time=   0.3s\n",
+      "[CV 2/5] END ................C=10, gamma=0.0001;, score=0.877 total time=   0.3s\n",
+      "[CV 3/5] END ................C=10, gamma=0.0001;, score=0.860 total time=   0.3s\n",
+      "[CV 4/5] END ................C=10, gamma=0.0001;, score=0.879 total time=   0.3s\n",
+      "[CV 5/5] END ................C=10, gamma=0.0001;, score=0.871 total time=   0.3s\n",
+      "[CV 1/5] END ................C=10, gamma=0.0005;, score=0.870 total time=   0.3s\n",
+      "[CV 2/5] END ................C=10, gamma=0.0005;, score=0.877 total time=   0.3s\n",
+      "[CV 3/5] END ................C=10, gamma=0.0005;, score=0.860 total time=   0.3s\n",
+      "[CV 4/5] END ................C=10, gamma=0.0005;, score=0.879 total time=   0.3s\n",
+      "[CV 5/5] END ................C=10, gamma=0.0005;, score=0.871 total time=   0.3s\n",
+      "[CV 1/5] END .................C=10, gamma=0.001;, score=0.870 total time=   0.3s\n",
+      "[CV 2/5] END .................C=10, gamma=0.001;, score=0.877 total time=   0.3s\n",
+      "[CV 3/5] END .................C=10, gamma=0.001;, score=0.860 total time=   0.3s\n",
+      "[CV 4/5] END .................C=10, gamma=0.001;, score=0.879 total time=   0.3s\n",
+      "[CV 5/5] END .................C=10, gamma=0.001;, score=0.871 total time=   0.3s\n",
+      "[CV 1/5] END .................C=10, gamma=0.005;, score=0.870 total time=   0.3s\n",
+      "[CV 2/5] END .................C=10, gamma=0.005;, score=0.877 total time=   0.3s\n",
+      "[CV 3/5] END .................C=10, gamma=0.005;, score=0.860 total time=   0.3s\n",
+      "[CV 4/5] END .................C=10, gamma=0.005;, score=0.879 total time=   0.3s\n",
+      "[CV 5/5] END .................C=10, gamma=0.005;, score=0.871 total time=   0.3s\n",
+      "[CV 1/5] END ................C=50, gamma=0.0001;, score=0.881 total time=   0.4s\n",
+      "[CV 2/5] END ................C=50, gamma=0.0001;, score=0.886 total time=   0.3s\n",
+      "[CV 3/5] END ................C=50, gamma=0.0001;, score=0.874 total time=   0.3s\n",
+      "[CV 4/5] END ................C=50, gamma=0.0001;, score=0.885 total time=   0.3s\n",
+      "[CV 5/5] END ................C=50, gamma=0.0001;, score=0.882 total time=   0.3s\n",
+      "[CV 1/5] END ................C=50, gamma=0.0005;, score=0.881 total time=   0.4s\n",
+      "[CV 2/5] END ................C=50, gamma=0.0005;, score=0.886 total time=   0.3s\n",
+      "[CV 3/5] END ................C=50, gamma=0.0005;, score=0.874 total time=   0.3s\n",
+      "[CV 4/5] END ................C=50, gamma=0.0005;, score=0.885 total time=   0.3s\n",
+      "[CV 5/5] END ................C=50, gamma=0.0005;, score=0.882 total time=   0.3s\n",
+      "[CV 1/5] END .................C=50, gamma=0.001;, score=0.881 total time=   0.4s\n",
+      "[CV 2/5] END .................C=50, gamma=0.001;, score=0.886 total time=   0.3s\n",
+      "[CV 3/5] END .................C=50, gamma=0.001;, score=0.874 total time=   0.3s\n",
+      "[CV 4/5] END .................C=50, gamma=0.001;, score=0.885 total time=   0.3s\n",
+      "[CV 5/5] END .................C=50, gamma=0.001;, score=0.882 total time=   0.3s\n",
+      "[CV 1/5] END .................C=50, gamma=0.005;, score=0.881 total time=   0.4s\n",
+      "[CV 2/5] END .................C=50, gamma=0.005;, score=0.886 total time=   0.3s\n",
+      "[CV 3/5] END .................C=50, gamma=0.005;, score=0.874 total time=   0.3s\n",
+      "[CV 4/5] END .................C=50, gamma=0.005;, score=0.885 total time=   0.3s\n",
+      "[CV 5/5] END .................C=50, gamma=0.005;, score=0.882 total time=   0.3s\n"
      ]
     },
     {
@@ -804,7 +804,7 @@
        "             verbose=3)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,15 +816,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'C': 10, 'gamma': 0.0001}\n",
-      "0.8888044957393081\n"
+      "{'C': 50, 'gamma': 0.0001}\n",
+      "0.8815571354761715\n"
      ]
     }
    ],
@@ -842,16 +842,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ygandhi.sav']"
+       "['ygandhi2.sav']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
     "# be sure to turn this in to BCS\n",
     "# if joblib fails to import, try running the command to install in terminal/git-bash\n",
     "import joblib\n",
-    "filename = 'ygandhi.sav'\n",
+    "filename = 'ygandhi2.sav'\n",
     "joblib.dump(model, filename)"
    ]
   },
